# python-para-devops

./: README.md  ambiente_demo.py  app.py  debug_example.py  monitor.py  qual_python.sh
I/O/: yaml_to_k8s.py
IO/: env_to_json.py  io_example.py  json_to_yaml.py  truque_open.py
IO/O/: app.env  chunks.py
meu_app/: main.py  pyproject.toml
meu_pacote/: pyproject.toml
meu_pacote/src/meu_pacote/: __init__.py
mytools/: __main__.py
protocols/sockets/: cliente_tcp_simples.py  servidor_tcp_simples.py
uv/: pyproject.toml
