[project]
name = "meu-pacote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vmagueta", email = "vs@platforme.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
meu-pacote = "meu_pacote:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
